cabal-version:      3.8
name:               htensor2
version:            0.1.0.0
build-type:         Simple

library
  hs-source-dirs:      src
  exposed-modules:
      HTensor.Header
    , HTensor.Types
  build-depends:
      base >=4.14 && <5
    , bytestring
    , binary
  default-language:    Haskell2010

test-suite htensor2-test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:
      test
  build-depends:
      base
    , htensor2
    , bytestring
    , binary
  default-language:    Haskell2010
