cabal-version:      3.8
name:               htensor
version:            0.1.0.0
build-type:         Simple

library
  hs-source-dirs:      src
  exposed-modules:
      HTensor.Header
    , HTensor.Types
  build-depends:
      base >=4.14 && <5
    , bytestring
    , binary
    , mmap >=0.5.9
  default-language:    Haskell2010

test-suite htensor-test
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:
      test
  build-depends:
      base
    , htensor
    , bytestring
    , binary
    , directory
    , mmap >=0.5.9
  default-language:    Haskell2010
